fixed contrast and img figure labels

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,7 @@ body {
 header {
     grid-area: header;
     background: #03a3df;
-    color: white;
+    color: black;
     padding: 2rem;
 }
 main {
@@ -69,7 +69,8 @@ p {
     font-size: 5rem;
     font-weight: bold;
 }
-header figure {
+header image {
+    display: block;
     margin: 0;
 }
 header ul {
@@ -82,13 +83,14 @@ header li {
 header a {
     text-decoration: none;
     padding: 1rem;
-    color: white;
+    color: black;
     margin: 1rem;
 }
 header a:first-of-type {
     margin-left: 0;
 }
 header a:hover {
+    color: white;
     background: #1b447f;
 }
 
@@ -195,10 +197,10 @@ header a:hover {
 .tour-text {
     padding: 1rem;
     font-size: 1.8rem;
-    background: #03a3df;
-    color: white;
+    color: #444444;
     text-align: center;
-    border-radius: 10px;
+    background-color: #03a3df80;
+    font-weight: bold;
 }
 
 .facility-grid-container {
@@ -249,6 +251,7 @@ header a:hover {
     color: white;
     margin: 4rem;
     padding: 1rem;
+    gap: 1rem;
 }
 .instructor h2 {
     margin-top: 0;
